[package]
name = "localrustsearch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poppler-rs = { version = "0.21.0", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
xml-rs = { version = "0.8.4", optional = true }

[features]
default = ["xml", "pdf"]
xml = ["dep:xml-rs"]
pdf = ["dep:poppler-rs"]
